--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -28,9 +28,8 @@
 							<h1>Paul Crooks</h1>
 							<p>Senior Software Engineer</p>
 						</header>
-						<!--
 						<hr />
-						<h2>Extra Stuff!</h2>
+						<h2>Projects</h2>
 						<form method="post" action="#">
 							<div class="field">
 								<input type="text" name="name" id="name" placeholder="Name" />
@@ -64,11 +63,9 @@
 							</ul>
 						</form>
 						<hr />
-						-->
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="fa-twitter">Twitter</a></li>
-								<li><a href="#" class="fa-instagram">Instagram</a></li>
+								<li><a href="https://www.instagram.com/pgcrooks" class="fa-instagram">Instagram</a></li>
 								<li><a href="#" class="fa-facebook">Facebook</a></li>
 							</ul>
 						</footer>
@@ -77,7 +74,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Jane Doe</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Paul Crooks</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
