--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -7,7 +7,7 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>Paul Crooks</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="{% static 'pages/assets/css/main.css' %}" />
@@ -27,8 +27,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Paul Crooks</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<p>Personal website showing off what I do.</p>
 							</div>
 						</div>
 						<nav>
@@ -37,7 +36,7 @@
 								<li><a href="#projects">Projects</a></li>
 								<li><a href="#instagram">Instagram</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<!--<li><a href="#elements">Elements</a></li>-->
+								<li><a href="#blog">Blog</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -96,9 +95,9 @@
 								</ul>
 							</article>
 
-						<!-- Elements -->
-							<article id="elements">
-								<h2 class="major">Elements</h2>
+						<!-- Blog -->
+							<article id="blog">
+								<h2 class="major">Blog</h2>
 
 								<section>
 									<h3 class="major">Text</h3>
