Cleanup Instagram app
This commit includes a database migration, add CSS classes for Instagram pictures and a tweak to the index to display the images in a grid rather than a list.

--- a/pages/static/pages/assets/css/main.css
+++ b/pages/static/pages/assets/css/main.css
@@ -682,6 +682,16 @@
 
 		}
 
+		img.insta {
+			float: left;
+			padding: 5px;
+		}
+
+		img.resize {
+			width: 11rem;
+			height: auto;
+		}
+
 /* List */
 
 	ol {
