--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="{% static 'pages/assets/css/main.css' %}" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="{% static 'pages/assets/css/ie9.css' %}" /><![endif]-->
 		<noscript><link rel="stylesheet" href="{% static 'pages/assets/css/noscript.css' %}" /></noscript>
+		<link rel="shortcut icon" href="{% static 'pages/favicon.ico' %}" type="image/x-icon">
 	</head>
 	<body>
 
