--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -28,16 +28,15 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Paul Crooks</h1>
-								<p>Personal website showing off what I do.</p>
+								<p>Senior embedded software engineer with a dirty Python habit.</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
-								<li><a href="#projects">Projects</a></li>
+								<li><a href="#blog">Blog</a></li>
 								<li><a href="#instagram">Instagram</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<li><a href="#blog">Blog</a></li>
+								<li><a href="#test">Test</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -45,19 +44,19 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Intro -->
-							<article id="intro">
-								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="{% static 'pages/images/pic01.jpg' %}" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#projects">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-							</article>
-
-						<!-- Projects -->
-							<article id="projects">
-								<h2 class="major">Projects</h2>
+						<!-- Blog -->
+							<article id="blog">
+								<h2 class="major">Blog</h2>
 								<span class="image main"><img src="{% static 'pages/images/pic02.jpg' %}" alt="" /></span>
-								<p>Personal website. Raspberry Pi. Qwiz.</p>
+								{% if latest_post_list %}
+								<ul>
+									{% for post in latest_post_list %}
+										<li>{{ post.title }}</li>
+									{% endfor %}
+								</ul>
+								{% else %}
+									<p>No blog posts available</p>
+								{% endif %}
 							</article>
 
 						<!-- Instagram -->
@@ -73,7 +72,7 @@
 										</a>
 									  </div>
 									{% endfor %}
-								  </div>
+								</div>
 							</article>
 
 						<!-- Contact -->
@@ -98,16 +97,14 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
 
-						<!-- Blog -->
-							<article id="blog">
-								<h2 class="major">Blog</h2>
+						<!-- Test -->
+							<article id="test">
+								<h2 class="major">Test</h2>
 
 								<section>
 									<h3 class="major">Text</h3>
