--- a/pages/static/pages/assets/css/main.css
+++ b/pages/static/pages/assets/css/main.css
@@ -143,7 +143,7 @@
 
 	strong, b {
 		color: #ffffff;
-		font-weight: 600;
+		font-weight: 800;
 	}
 
 	em, i {
@@ -1103,7 +1103,7 @@
 			-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
 			-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
 			transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-			background-image: url("../../images/bg.jpg");
+			background-image: url("../../images/bg_sur.jpg");
 			background-position: center;
 			background-size: cover;
 			background-repeat: no-repeat;
@@ -1278,6 +1278,7 @@
 				letter-spacing: 0.2rem;
 				font-size: 0.8rem;
 				line-height: 2;
+				font-weight: 600;
 			}
 
 		#header nav ul {
@@ -1310,6 +1311,7 @@
 					text-transform: uppercase;
 					letter-spacing: 0.2rem;
 					font-size: 0.8rem;
+					font-weight: 600;
 					border-bottom: 0;
 				}
 
@@ -1584,6 +1586,7 @@
 		#footer .copyright {
 			letter-spacing: 0.2rem;
 			font-size: 0.6rem;
+			font-weight: 600;
 			opacity: 0.75;
 			margin-bottom: 0;
 			text-transform: uppercase;
