Update index text

--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -52,20 +52,28 @@
 				<article id="about">
 					<h2 class="major">About</h2>
 					<span class="image main"><img src="{% static 'pages/images/profile.jpg' %}" alt=""></span>
-					I'm a senior embedded software engineer in the telecoms industry, mainly working in the C language.
+					Hi I'm Paul Crooks, a senior embedded software engineer in the telecoms industry, mainly working in
+					the C language. However my real passion is learning new technologies and ideas.
 				</article>
 
 				<!-- Projects -->
 				<article id="projects">
 					<h2 class="major">Projects</h2>
 						<h3>Personal Website</h3>
-							<a href="https://github.com/pgcrooks/paulcrooks">GitHub</a>
+							This website is powered by Django and uses HTML5 Up templates. Additional apps will be added
+							over time; a blog and league score board are planned. Go check it out on my
+							<a href="https://github.com/pgcrooks/paulcrooks">GitHub</a>.
 							<hr />
 						<h3>Qwiz</h3>
-							<a href="https://github.com/TheQwizTeam/qwiz">GitHub</a>
+							Qwiz was born during a hackathon and is a SaaS Quiz webapp. It uses Django
+							and PostgreSQL for the backend, connected to an Angular2 frontend using Redis message queues.
+							Check out our team <a href="https://github.com/TheQwizTeam/qwiz">GitHub</a>.
 							<hr />
 						<h3>GitAssist</h3>
-							<a href="https://github.com/pgcrooks/GitAssist">GitHub</a>
+							GitAssist was created for a hackathon and provides a Google Assistant skill to link to a
+							GitHub account, adding voice commands to query issues and manage pull requests. I was in charge
+							of the natural language processing, using Dialogflow, and my work can be found on
+							<a href="https://github.com/pgcrooks/GitAssist">GitHub</a>.
 				</article>
 
 				<!-- Blog -->
