Project links should open in a new tab

--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -62,18 +62,18 @@
 						<h3>Personal Website</h3>
 							This website is powered by Django and uses HTML5 Up templates. Additional apps will be added
 							over time; a blog and league score board are planned. Go check it out on my
-							<a href="https://github.com/pgcrooks/paulcrooks">GitHub</a>.
+							<a href="https://github.com/pgcrooks/paulcrooks" target="_blank">GitHub</a>.
 							<hr />
 						<h3>Qwiz</h3>
 							Qwiz was born during a hackathon and is a SaaS Quiz webapp. It uses Django
 							and PostgreSQL for the backend, connected to an Angular2 frontend using Redis message queues.
-							Check out our team <a href="https://github.com/TheQwizTeam/qwiz">GitHub</a>.
+							Check out our team <a href="https://github.com/TheQwizTeam/qwiz" target="_blank">GitHub</a>.
 							<hr />
 						<h3>GitAssist</h3>
 							GitAssist was created for a hackathon and provides a Google Assistant skill to link to a
 							GitHub account, adding voice commands to query issues and manage pull requests. I was in charge
 							of the natural language processing, using Dialogflow, and my work can be found on
-							<a href="https://github.com/pgcrooks/GitAssist">GitHub</a>.
+							<a href="https://github.com/pgcrooks/GitAssist" target="_blank">GitHub</a>.
 				</article>
 
 				<!-- Blog -->
