--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -39,7 +39,6 @@
 						<li><a href="#about">About</a></li>
 						<!--<li><a href="#blog">Blog</a></li>-->
 						<li><a href="#projects">Projects</a></li>
-						<li><a href="#instagram">Instagram</a></li>
 						<!--<li><a href="#test">Test</a></li>-->
 					</ul>
 				</nav>
@@ -90,7 +89,7 @@
 					{% endif %}
 				</article>
 
-				<!-- Instagram -->
+				<!-- Instagram
 				<article id="instagram">
 					<h2 class="major">Instagram</h2>
 					{% load instagram_client %}
@@ -105,6 +104,7 @@
 						{% endfor %}
 					</div>
 				</article>
+				-->
 
 			</div>
 
