Update hello text

--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -29,7 +29,7 @@
 					<div class="inner">
 						<h1>Paul Crooks</h1>
 						<p>
-							Senior embedded software engineer with a passion for the unknown.<br />
+							Principle embedded software engineer with a passion for the unknown.<br />
 							Photographer, sound engineer, coffee addict, traveller
 						</p>
 					</div>
