--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -37,7 +37,7 @@
 				<nav>
 					<ul>
 						<li><a href="#about">About</a></li>
-						<!--<li><a href="#blog">Blog</a></li>-->
+						<li><a href="#blog">Blog</a></li>
 						<li><a href="#projects">Projects</a></li>
 						<!--<li><a href="#test">Test</a></li>-->
 					</ul>
